GNOME Bugzilla – Bug 787926
nvdec: The discontinuity flag is not set correctly
Last modified: 2017-09-20 01:23:10 UTC
Should use bitwise OR
Created attachment 360094 [details] [review] patch
commit 650adc43a94c66eb569012046580f40800a6881f Author: Per-Erik Brodin <per-erik.brodin@ericsson.com> Date: Tue Sep 19 17:18:48 2017 -0700 nvdec: Correctly set the discontinuity flag Instead of clearing the "valid timestamp" flag, which would result in a timestamp mismatch after a discontinuity. https://bugzilla.gnome.org/show_bug.cgi?id=787926